--- a/test.qmd
+++ b/test.qmd
@@ -1,24 +1,34 @@
 ---
 title: "Chapter2"
-output:
-  pdf_document:
-    latex_engine: xelatex
+format:
+  html
+embed-resources:
+  true
 params:
   taxon: Tyto
+  all_results: NA
 ---
 
 ```{r, include=FALSE, echo=FALSE}
-all_results <- chapter2::run_chapter2(params$taxon)
+library(DT)
+library(magrittr)
+library(tidyverse)
+library(htmlwidgets)
+library(formattable)
+all_results <- jsonlite::unserializeJSON(params$all_results)
 ```
+
+
 
 # Taxon `r params$taxon`
 
 ## Wikipedia summary
 
+`r all_results$wikipedia_summary`
 
-```{r summarypicture, echo=FALSE, fig.cap="Picture from Wikipedia", out.width = '90%'}
-knitr::include_graphics(all_results$wikipedia_pics)
-```
+Here is an image from Wikipedia:
+
+<img src='`r all_results$wikipedia_pics[1]`' alt='Image of `r params$taxon` from Wikipedia'>
 
 
 ## OpenTree
@@ -28,7 +38,8 @@ Taxon **`r params$taxon`** has `r all_results$otol$ntaxa` terminal taxa in OpenT
 
 ```{r, echo=FALSE}
 if(nrow(all_results$otol$studies)>0) {
-  pander::pander(all_results$otol$studies, split.table = Inf)
+ # pander::pander(all_results$otol$studies, split.table = Inf)
+ datatable(all_results$otol$studies, rownames=FALSE)
 }
 ```
 
@@ -51,6 +62,8 @@ In GenBank, there are `r all_results$genbank_count` species listed for this grou
 pander::pander(data.frame(seqs=all_results$genbank_count_by_gene))
 ```
 
+
+
 ## PubMed
 
 There are `r all_results$pubmed$count` articles that match `r params$taxon` AND phylogeny on PubMed. Here are the most recent.
@@ -59,30 +72,40 @@ There are `r all_results$pubmed$count` articles that match `r params$taxon` AND 
 pubmed.df <- all_results$pubmed$recent.papers
 if(nrow(pubmed.df)>0) {
   pubmed.df <- pubmed.df[order(pubmed.df$Date, decreasing=TRUE),]
-  pander::pander(pubmed.df, split.table = Inf)
+  datatable(pubmed.df)
 }
 ```
+
 
 ## Realm
 
 Here is information about realms (biogeographic regions) by species; frequency of record in each realm.
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE}
 realm <- all_results$location_realm_biome$realm
 for (i in sequence(nrow(realm))) {
   realm[i,] <- realm[i,]/sum(realm[i,], na.rm=TRUE)
 }
-pander::pander(data.frame(realm))
+datatable(data.frame(realm))
 ```
 
 ## Biome
 
-Here is information about biomes by species; frequency of records in each biome.
+Here is information about biomes by species; frequency of records in each biome, using formattable
 
-```{r, echo=FALSE, eval=FALSE}
+```{r, echo=FALSE}
 biome <- all_results$location_realm_biome$biome
 for (i in sequence(nrow(biome))) {
   biome[i,] <- biome[i,]/sum(biome[i,], na.rm=TRUE)
 }
-pander::pander(data.frame(biome))
+biome <- round(100*biome,1)
+
+
+myForm <- function(x) {
+	color_tile("white", "orange")
+}
+biome_df <- data.frame(biome)
+colnames(biome_df) <- gsub("\\.", " ", (gsub('\\.\\.', ', ', gsub('\\.\\.\\.', " and ", colnames(biome_df)))))
+
+formattable(biome_df, lapply(biome_df, myForm))
 ```
