now with stamen terrain

--- a/test.qmd
+++ b/test.qmd
@@ -15,6 +15,7 @@ library(magrittr)
 library(tidyverse)
 library(htmlwidgets)
 library(formattable)
+library(leaflet)
 all_results <- jsonlite::unserializeJSON(params$all_results)
 ```
 
@@ -29,6 +30,13 @@ all_results <- jsonlite::unserializeJSON(params$all_results)
 Here is an image from Wikipedia:
 
 <img src='`r all_results$wikipedia_pics[1]`' alt='Image of `r params$taxon` from Wikipedia'>
+
+## Traits from Encylopedia of Life
+
+```{r, echo=FALSE}
+ traits <- chapter2:::eol_traits2(all_results$eol)
+ datatable(traits, rownames=FALSE)
+```
 
 
 ## OpenTree
@@ -76,6 +84,17 @@ if(nrow(pubmed.df)>0) {
 }
 ```
 
+## Map
+
+```{r, echo=FALSE}
+	location_info <- all_results$location_realm_biome$locations
+	#location_info$lat <- location_info$latitude
+	#location_info$lng <- location_info$longitude
+	m = leaflet(location_info) %>% addTiles() %>% addProviderTiles(providers$Stamen.Terrain)
+	m %>% addMarkers(
+  		clusterOptions = markerClusterOptions()
+	)	
+```
 
 ## Realm
 
