--- a/test.qmd
+++ b/test.qmd
@@ -34,7 +34,7 @@ Here is an image from Wikipedia:
 ## Traits from Encylopedia of Life
 
 ```{r, echo=FALSE}
- traits <- chapter2:::eol_traits2(all_results$eol)
+ traits <- phydo:::eol_traits2(all_results$eol)
  datatable(traits, rownames=FALSE)
 ```
 
